[package]
name = "profiling-futures-macros"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = ".."
readme = "README.md"
repository = "https://github.com/BVE-Reborn/profiling-futures"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
