[package]
name = "chrome"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0 OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
profiling-futures = { path = "../../profiling-futures" }
wgpu-subscriber = "0.1"
